--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -11,10 +11,10 @@
         android:icon="@drawable/categories_ic"
         android:title="Categories" />
 
-<!--    <item-->
-<!--        android:id="@+id/sale"-->
-<!--        android:icon="@drawable/sale_ic"-->
-<!--        android:title="Sale"/>-->
+    <item
+        android:id="@+id/sale"
+        android:icon="@drawable/sale_ic"
+        android:title="Sale"/>
 
     <item
         android:id="@+id/profile"
